Fixed controller z-index | 28/12/2021

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -441,6 +441,12 @@ spacehub--figure-caption-static * {
     align-items: center;
     margin-left: auto;
 
+    /*  Push it up. bigger content covers it  */
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 1010;
+
 }
 
 .widget--calendar {
